# Mastering_Embedded_systems_diploma

./: ReadMe.txt
Assignments/Unit 2/: readme.txt
Assignments/Unit 2/Functions/: EX1.c  EX2.c  EX3.c  EX4.c
Assignments/Unit 2/pointers/: EX1.c  EX2.c  EX3.c  EX4.c  EX5.c
Assignments/unit_11_second_term/smart_car_parking/: README.md
Assignments/unit_14_Mastering_ARM_Cortex/lesson 2/: README.md
Assignments/unit_14_Mastering_ARM_Cortex/lesson 3/: README.md  lab1.c  lab2.c  lab3.c  lab4.c  lab5.c  lab6.c
Assignments/unit_14_Mastering_ARM_Cortex/lesson 4/: README.md
Assignments/unit_14_Mastering_ARM_Cortex/lesson 5/: README.md
Assignments/unit_3_embedded_c/lab 1_embedded c _lesson 1/: Platform_Types.h
Assignments/unit_3_embedded_c/lab 2 _unit 3_lesson 2/: app.c  app.s  learn_in_depth.elf  output.map  symbols.txt  uart.h  uart.i
Assignments/unit_3_embedded_c/lab 2_embedded c _lesson 2/: learn_in_depth.elf  linker_script.ld  makefile  map_file.map  startup.s
Assignments/unit_3_embedded_c/lab 3_embedded c _lesson 3/: led_toggling.elf  linker_script.ld  makefile  map_file.map  startup.s  symbols.txt
Assignments/unit_5_first_term/Student_information_managment_system/: CMakeLists.txt
Assignments/unit_5_first_term/Student_information_managment_system/include/: FIFO.h  fileManager.h
Assignments/unit_5_first_term/Student_information_managment_system/src/: FIFO.c  main.c  student.c  systemManager.c
Exams/: Readme.txt
Exams/Midterm 1/: ques1.c  ques10.c  ques2.c  ques3.c  ques4.c  ques5.c  ques6.c  ques7.c  ques8.c  ques9.c
(+476 files in other folders)
